# sing-coach-streamlit

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_archive.py  llm_tts_stream.py  pyproject.toml  requirements.txt
