[project]
name = "sing-coach-streamlit"
version = "0.1.0"
description = "AriaCoach: a Streamlit singing coach powered by Gemini audio analysis and TTS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.10.0",
    "streamlit>=1.58.0",
    "pyOpenSSL",
    "python-dotenv>=1.2.2",
    "watchdog",
    "matplotlib>=3.9.0",
]
